# r2x-cli

./: .gitignore  AST_DISCOVERY_PLAN.md  AST_DISCOVERY_STATUS.md  CHANGELOG.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  cliff.toml  dist-workspace.toml  justfile  release-plz.toml  rule.yaml
.github/: build-setup.yml
.github/actions/build-python-shim/: action.yml
.github/actions/setup-uv-python/: action.yml
.github/workflows/: build-python-shims.yml  build.yml  python-shim.yml  release-plez.yml  release.yml
benches/: bench_pkg_install.rs
crates/r2x-ast/: Cargo.toml
crates/r2x-ast/src/: decorator_scanner.rs  discovery_types.rs  lib.rs  naming.rs  package_cache.rs  schema_extractor.rs
crates/r2x-ast/src/entry_points/: mod.rs  parser.rs  pyproject.rs
crates/r2x-ast/src/extractor/: args.rs  mod.rs  parameters.rs  resolver.rs  tests.rs  tests.rs.bak
crates/r2x-cli/: Cargo.toml  build.rs
crates/r2x-cli/src/: common.rs  errors.rs  help.rs  lib.rs  main.rs  manifest_lookup.rs  package_verification.rs  pipeline_config.rs  plugin_cache.rs  plugin_manifest.rs  test_support.rs
crates/r2x-cli/src/commands/: cache.rs  config.rs  init.rs  log.rs  mod.rs  python.rs  read.rs
crates/r2x-cli/src/commands/plugins/: clean.rs  context.rs  install.rs  list.rs  mod.rs  remove.rs  sync.rs  utils.rs
crates/r2x-cli/src/commands/run/: mod.rs  pipeline.rs  plugin.rs
crates/r2x-cli/src/commands/run/pipeline/: builder.rs  config.rs  constants.rs  mod.rs  overrides.rs  validation.rs
crates/r2x-cli/src/plugins/: config.rs  discovery.rs  error.rs  install.rs  mod.rs  package_resolver.rs  package_spec.rs  utils.rs
crates/r2x-cli/tests/: integration.rs  unit.rs
crates/r2x-cli/tests/fixtures/: config.toml  r2x.toml
crates/r2x-cli/tests/python_plugins/r2x_core/: __init__.py  logger.py
crates/r2x-cli/tests/python_plugins/r2x_reeds/: parser.py
crates/r2x-cli/tests/python_plugins/r2x_sienna/: parser.py
crates/r2x-cli/tests/tests/: integration_tests.rs
crates/r2x-cli/wix/: main.wxs
crates/r2x-config/: Cargo.toml
crates/r2x-config/src/: lib.rs  venv_paths.rs
crates/r2x-logger/: Cargo.toml
crates/r2x-logger/src/: lib.rs
crates/r2x-manifest/: Cargo.toml
crates/r2x-manifest/src/: errors.rs  execution_types.rs  lib.rs  manifest.rs  manifest_writer.rs  package_discovery.rs  runtime.rs  sync.rs  types.rs
crates/r2x-python/: Cargo.toml  build.rs
crates/r2x-python/src/: errors.rs  initialization.rs  lib.rs  manifest_builder.rs  package_loader.rs  plugin_invoker.rs  plugin_kwargs.rs  plugin_regular.rs  plugin_upgrader.rs  python_bridge.rs  python_discovery.rs  python_loader.rs  utils.rs
crates/r2x-python/src/plugin_invoker/: kwargs.rs  mod.rs  regular.rs  upgrader.rs
scripts/: __init__.py  detect_uv_python.py  fix_python_dylib.sh  modify_installer.py  patch_dist_installer.sh  powershell-installer.ps1  prepare_python_shim.sh  shell-installer.sh  update_checksums.py
scripts/tests/: __init__.py  test_detect_uv_python.py
src/: config_manager.rs  entrypoints.rs  error.rs  lib.rs  main.rs  schema.rs  symlink.rs
src/cli/: config.rs  mod.rs  plugins.rs  read.rs  run.rs  shell.rs  upgrade.rs  write.rs
src/commands/: mod.rs  python.rs  read.rs  run.rs
src/config/: mod.rs  workflow.rs
src/plugins/: ast_discovery.rs  discovery.rs  install.rs  list.rs  mod.rs  sync.rs
src/python/: interpreter.rs  mod.rs  plugin.rs  plugin_cache.rs  uv.rs  venv.rs
src/python_bridge/: initialization.rs  mod.rs
tests/: integration.rs  unit.rs
