[workspace]
members = [
    "crates/*",
]
resolver = "2"

[workspace.package]
version = "0.0.17"
edition = "2021"
authors = ["pesap <pesap@users.noreply.github.com>", "Micah Webb <micahpw@users.noreply.github.com>"]
repository = "https://github.com/NREL/r2x-cli"
license = "BSD-3-Clause"
homepage = "https://github.com/NREL/r2x-cli"
documentation = "https://docs.rs/r2x"
rust-version = "1.72"

[workspace.dependencies]
r2x-config = { path = "crates/r2x-config", version = "0.0.4" }
r2x-manifest = { path = "crates/r2x-manifest", version = "0.0.4" }
r2x-python = { path = "crates/r2x-python", version = "0.0.8" }
r2x-logger = { path = "crates/r2x-logger", version = "0.0.1" }
r2x-ast = { path = "crates/r2x-ast", version = "0.0.5" }

[profile.dist]
inherits = "release"
lto = "thin"
