[package]
name = "r2x-config"
version = "0.0.4"
edition = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
rust-version = { workspace = true }

description = "Configuration management for the r2x CLI"

[dependencies]
dirs = "6.0"
serde = { version = "1.0", features = ["derive"] }
toml = { version = "0.9", features = ["preserve_order"] }
which = "8.0.0"
