[package]
name = "r2x-logger"
version = "0.0.4"
edition = "2021"
description = "Logging utilities for the r2x CLI"
license = "BSD-3-Clause"
repository = "https://github.com/NREL/r2x-cli"
publish = false

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
colored = "3.0"
dirs = "6.0"
indicatif = "0.18"
