[package]
name = "r2x-logger"
version = "0.0.1"
edition = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
rust-version = { workspace = true }

description = "Logging utilities for the r2x CLI"
publish = false

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
colored = "3.0"
dirs = "6.0"
indicatif = "0.18"
