[package]
name = "r2x-manifest"
version = "0.0.4"
edition = "2021"
description = "Manifest management utilities for the r2x CLI"
license = "BSD-3-Clause"
repository = "https://github.com/NREL/r2x-cli"
publish = false

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = { version = "0.9", features = ["preserve_order"] }
tracing = "0.1"
thiserror = "2.0"

[dev-dependencies]
tempfile = "3.8"
