[package]
name = "r2x-manifest"
version = "0.0.4"
edition = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
rust-version = { workspace = true }

description = "Manifest management utilities for the r2x CLI"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = { version = "0.9", features = ["preserve_order"] }
tracing = "0.1"
thiserror = "2.0"

[dev-dependencies]
tempfile = "3.8"
