[package]
name = "r2x-python"
version = "0.0.1"
edition = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
rust-version = { workspace = true }

description = "Python bridge for the r2x CLI"
publish = false

[dependencies]
once_cell = "1.19"
pyo3 = { version = "0.27", features = ["auto-initialize", "abi3-py38"] }
serde_json = "1.0"
tracing = "0.1"
r2x-config = { path = "../r2x-config" }
r2x-logger = { path = "../r2x-logger" }
r2x-manifest = { path = "../r2x-manifest" }
thiserror = "2.0"
