[package]
name = "r2x-python"
version = "0.0.11"
edition = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
rust-version = { workspace = true }

description = "Python bridge for the r2x CLI"

[dependencies]
once_cell = "1.19"
pyo3 = { version = "0.27", features = ["abi3-py311"] }
serde_json = "1.0"
tracing = "0.1"
thiserror = "2.0"
r2x-config = { workspace = true }
r2x-logger = { workspace = true }
r2x-manifest = { workspace = true }

[dev-dependencies]
tempfile = "3.0"

[lints]
workspace = true
